fix(fluxo de porteiros): Validando o fluxo de porteiros já com a lógica do JWT