@@ -12,6 +12,7 @@ import sptech.school.apizeporteiro.service.porteiro.dto.PorteiroListagemDto;
 
 import javax.sound.sampled.Port;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class PorteiroMapper {
 
@@ -19,7 +20,6 @@ public class PorteiroMapper {
         if (entity == null) return null;
 
         PorteiroListagemDto dto = new PorteiroListagemDto();
-
         dto.setId(entity.getId());
         dto.setNome(entity.getNome());
         dto.setRg(entity.getRg());
@@ -43,27 +43,23 @@ public class PorteiroMapper {
 
     public static List<PorteiroListagemDto.EntregaDto> toEntregaDto(List<Entrega> entities) {
         return entities.stream().map(f -> {
-
             PorteiroListagemDto.EntregaDto dto = new PorteiroListagemDto.EntregaDto();
-
             dto.setId(f.getId());
             dto.setTipoEntrega(f.getTipoEntrega());
             dto.setDataRecebimentoPorteiro(f.getDataRecebimentoPorteiro());
             dto.setDataRecebimentoMorador(f.getDataRecebimentoMorador());
-
             return dto;
-
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     public static Porteiro toEntity(PorteiroCriacaoDto dto) {
         if (dto == null) return null;
 
         Porteiro porteiro = new Porteiro();
-
         porteiro.setNome(dto.getNome());
         porteiro.setRg(dto.getRg());
         porteiro.setSenha(dto.getSenha());
+
         Condominio condominio = new Condominio();
         condominio.setId(dto.getCondominioId());
         porteiro.setCondominio(condominio);
@@ -71,24 +67,13 @@ public class PorteiroMapper {
         return porteiro;
     }
 
-    public static Porteiro of(PorteiroCriacaoDto dto){
-        Porteiro porteiro = new Porteiro();
-
-        porteiro.setNome(dto.getNome());
-        porteiro.setRg(dto.getRg());
-        porteiro.setSenha(dto.getSenha());
-
-        return porteiro;
-    }
-
-    public static PorteiroTokenDto of(Porteiro porteiro, String token){
+    public static PorteiroTokenDto toTokenDto(Porteiro porteiro, String token){
         PorteiroTokenDto tokenDto = new PorteiroTokenDto();
-
         tokenDto.setUserId(porteiro.getId());
         tokenDto.setNome(porteiro.getNome());
         tokenDto.setRg(porteiro.getRg());
         tokenDto.setToken(token);
-
         return tokenDto;
     }
 }
+
